<resources>
    <string name="app_name">To Do</string>
    <string name="enter_the_task">Enter The task</string>
    <string name="today">Today</string>
    <string name="task_example">Enter Task, e.g. Study.</string>
    <string name="priority_high">HIGH</string>
    <string name="priority_medium">MEDIUM</string>
    <string name="priority_low">LOW</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="due_date">Due Date</string>
    <string name="todo">TODO</string>
    <string name="underline">_________________________________________________________</string>
</resources>