<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/enter_task_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/task_example"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/setDueDate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

    <ImageButton
        android:id="@+id/setPriority_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_flag_24" />

    <ImageButton
        android:id="@+id/savetask_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_save_24" />

    <RadioGroup
        android:id="@+id/radioGroup_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:backgroundTint="#F8ECEC"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sc_bold"
            android:padding="8dp"
            android:text="@string/priority_high"
            android:textAllCaps="false"
            android:textColor="#EC0B0B"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_med"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sc_bold"
            android:padding="8dp"
            android:text="@string/priority_medium"
            android:textColor="#F4CC1C"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sc_bold"
            android:padding="8dp"
            android:text="@string/priority_low"
            android:textColor="#3BE441"
            android:textSize="16sp" />
    </RadioGroup>

    <com.google.android.material.chip.Chip
        android:id="@+id/Today_chip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:text="@string/today"
        app:chipIcon="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/tomorrow_chip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:text="@string/tomorrow"
        app:chipIcon="@drawable/ic_baseline_wb_sunny_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/nextWeek_chip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:text="@string/next_week"
        app:chipIcon="@drawable/ic_baseline_next_week_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="323dp"
        android:layout_height="296dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/dueDate_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="calendar_view,Today_chip,nextWeek_chip,tomorrow_chip" />

</androidx.constraintlayout.widget.ConstraintLayout>